[gd_scene load_steps=58 format=1]

[ext_resource path="res://rat.gd" type="Script" id=1]
[ext_resource path="res://blood.png" type="Texture" id=2]
[ext_resource path="res://anims/enemy/rat/idle/0.png" type="Texture" id=3]
[ext_resource path="res://anims/enemy/rat/idle/1.png" type="Texture" id=4]
[ext_resource path="res://anims/enemy/rat/idle/2.png" type="Texture" id=5]
[ext_resource path="res://anims/enemy/rat/idle/3.png" type="Texture" id=6]
[ext_resource path="res://anims/enemy/rat/idle/4.png" type="Texture" id=7]
[ext_resource path="res://anims/enemy/rat/idle/5.png" type="Texture" id=8]
[ext_resource path="res://anims/enemy/rat/idle/6.png" type="Texture" id=9]
[ext_resource path="res://anims/enemy/rat/idle/7.png" type="Texture" id=10]
[ext_resource path="res://anims/enemy/rat/idle/8.png" type="Texture" id=11]
[ext_resource path="res://anims/enemy/rat/idle/9.png" type="Texture" id=12]
[ext_resource path="res://anims/enemy/rat/walk/0.png" type="Texture" id=13]
[ext_resource path="res://anims/enemy/rat/walk/1.png" type="Texture" id=14]
[ext_resource path="res://anims/enemy/rat/walk/2.png" type="Texture" id=15]
[ext_resource path="res://anims/enemy/rat/walk/3.png" type="Texture" id=16]
[ext_resource path="res://anims/enemy/rat/walk/4.png" type="Texture" id=17]
[ext_resource path="res://anims/enemy/rat/walk/5.png" type="Texture" id=18]
[ext_resource path="res://anims/enemy/rat/walk/6.png" type="Texture" id=19]
[ext_resource path="res://anims/enemy/rat/walk/7.png" type="Texture" id=20]
[ext_resource path="res://anims/enemy/rat/walk/8.png" type="Texture" id=21]
[ext_resource path="res://anims/enemy/rat/walk/9.png" type="Texture" id=22]
[ext_resource path="res://anims/enemy/rat/grunt/0.png" type="Texture" id=23]
[ext_resource path="res://anims/enemy/rat/grunt/1.png" type="Texture" id=24]
[ext_resource path="res://anims/enemy/rat/grunt/2.png" type="Texture" id=25]
[ext_resource path="res://anims/enemy/rat/grunt/3.png" type="Texture" id=26]
[ext_resource path="res://anims/enemy/rat/grunt/4.png" type="Texture" id=27]
[ext_resource path="res://anims/enemy/rat/grunt/5.png" type="Texture" id=28]
[ext_resource path="res://anims/enemy/rat/grunt/6.png" type="Texture" id=29]
[ext_resource path="res://anims/enemy/rat/grunt/7.png" type="Texture" id=30]
[ext_resource path="res://anims/enemy/rat/grunt/8.png" type="Texture" id=31]
[ext_resource path="res://anims/enemy/rat/grunt/9.png" type="Texture" id=32]
[ext_resource path="res://anims/enemy/rat/atk/0.png" type="Texture" id=33]
[ext_resource path="res://anims/enemy/rat/atk/1.png" type="Texture" id=34]
[ext_resource path="res://anims/enemy/rat/atk/2.png" type="Texture" id=35]
[ext_resource path="res://anims/enemy/rat/atk/3.png" type="Texture" id=36]
[ext_resource path="res://anims/enemy/rat/atk/4.png" type="Texture" id=37]
[ext_resource path="res://anims/enemy/rat/atk/5.png" type="Texture" id=38]
[ext_resource path="res://anims/enemy/rat/atk/6.png" type="Texture" id=39]
[ext_resource path="res://anims/enemy/rat/atk/7.png" type="Texture" id=40]
[ext_resource path="res://anims/enemy/rat/atk/8.png" type="Texture" id=41]
[ext_resource path="res://anims/enemy/rat/atk/9.png" type="Texture" id=42]
[ext_resource path="res://anims/enemy/rat/die/0.png" type="Texture" id=43]
[ext_resource path="res://anims/enemy/rat/die/1.png" type="Texture" id=44]
[ext_resource path="res://anims/enemy/rat/die/2.png" type="Texture" id=45]
[ext_resource path="res://anims/enemy/rat/die/3.png" type="Texture" id=46]
[ext_resource path="res://anims/enemy/rat/die/4.png" type="Texture" id=47]
[ext_resource path="res://anims/enemy/rat/die/5.png" type="Texture" id=48]
[ext_resource path="res://anims/enemy/rat/die/6.png" type="Texture" id=49]
[ext_resource path="res://anims/enemy/rat/die/7.png" type="Texture" id=50]
[ext_resource path="res://anims/enemy/rat/die/8.png" type="Texture" id=51]
[ext_resource path="res://anims/enemy/rat/die/9.png" type="Texture" id=52]
[ext_resource path="res://bloodbar/bar_under_low_res.png" type="Texture" id=53]
[ext_resource path="res://bloodbar/progress_low_res.png" type="Texture" id=54]

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 4, 8, -8, 8, -8, 4, 4, 4 )

[sub_resource type="SpriteFrames" id=2]

animations = [ { "frames":[ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ], "loop":true, "name":"idle", "speed":5.0 }, { "frames":[ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ], "loop":true, "name":"walk", "speed":15.0 }, { "frames":[ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ], "loop":false, "name":"grunt", "speed":15.0 }, { "frames":[ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ], "loop":false, "name":"atk", "speed":10.0 }, { "frames":[ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ], "loop":false, "name":"die", "speed":5.0 } ]

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 12, 16, -4, 16, -4, -4, 12, -4 )

[node name="rat" type="RigidBody2D" groups=[ "enemy" ]]

input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 5.0
damp_override/angular = 5.0
script/script = ExtResource( 1 )

[node name="BloodPart" type="Particles2D" parent="."]

config/amount = 30
config/lifetime = 0.5
config/emit_timeout = 0.2
config/emitting = false
config/texture = ExtResource( 2 )
params/direction = 110.0
params/spread = 20.0
params/linear_velocity = 80.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "idle"
frame = 4
playing = true
offset = Vector2( 0, -8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( 4, 8, -8, 8, -8, 4, 4, 4 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="TextureProgress" type="TextureProgress" parent="."]

visibility/visible = false
visibility/light_mask = 0
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -17.0
margin/top = -24.0
margin/right = 58.0
margin/bottom = -13.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 53 )
texture/over = null
texture/progress = ExtResource( 54 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="RetaliateTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AttackTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="CdTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -20, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Hurtbox" type="CollisionPolygon2D" parent="Area2D"]

transform/pos = Vector2( -20, 0 )
build_mode = 0
polygon = Vector2Array( 12, -4, -4, -4, -4, 16, 12, 16 )
shape_range = Vector2( 0, 0 )
trigger = false

[connection signal="finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_finished"]

[connection signal="timeout" from="RetaliateTimer" to="." method="_on_RetaliateTimer_timeout"]

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]


